--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://avigajjewar.github.io/",
+  "homepage": "https://avigajjewar.github.io/food-point/",
   "name": "food-point",
   "private": true,
   "version": "0.0.0",
